--- a/style.css
+++ b/style.css
@@ -20,6 +20,7 @@ body{
      position: relative;
     display: grid;
     grid-template-columns: 0.7fr 1fr;
+    grid-template-rows: 1fr 1fr;
     font-weight: 900;
 
 }
@@ -38,6 +39,7 @@ img {
 
 .side{
     position: relative;
+    
 
 bottom: 0;
 }
@@ -121,12 +123,13 @@ ul li:nth-child(odd){
 }
 .gh{
     position: relative;
-    padding: 1rem;
+    height: 100%;
+
     
     
 }
 .name{
-    position: absolute;
+    position: relative;
  background-color: #0bfba2;
  left: 0;
  height: 40%;
@@ -146,7 +149,7 @@ ul li:nth-child(odd){
     position: absolute;
     background-color: black;
     left: 0;
-    top: 59.8%;
+    top: 61%;
     clip-path: polygon(0 0, 100% 9% , 100%  100% , 0 100%);
     height: 40%;
     width: 110%;
