--- a/style.css
+++ b/style.css
@@ -84,12 +84,18 @@ h3{
     background-color: white;
     padding: 0.5rem;
     box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.278);
-    width: 90%;
+    width: 85%;
+
 }
 ul{
+    position: relative;
     display: grid;
     gap: 0.5rem;
     list-style: none;
+    margin-left: 2rem;
+    place-self: center;
+    width: 100%;
+
     
 }
 
